[package]
name = "elsa-lsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Language server for the Elsa lambda calculus language"
repository = "https://github.com/MrPoloGit/elsa-lsp"

[[bin]]
name = "elsa-lsp"

[dependencies]
lsp-server = "0.7"
lsp-types  = "0.95"
serde_json = "1"
